--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
 
+	<script src="http://code.jivosite.com/widget/OhbcnxFj4Z" async></script>
+
   </head>
 
   <body>
@@ -599,7 +601,7 @@
                 <ul style="text-align:left">
                   <li><b>İçerik</b> &#160;&#160;&#160;&#160;&#160;&#160;&#160;: Yazılım,tablet ve kiosk </li>
                   <li><b>Donanım</b> &#160;: 10" tablet</li>
-                  <li><b>Fiyat</b> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;: 5000 TL</li>
+                  <li><b>Fiyat</b> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;: Sorunuz .</li>
 
                 </ul>
               <!--  <div class="price">$199 <span>/mo</span></div>-->
@@ -673,7 +675,7 @@
           <p class="text"><b>Kayseri Şube &#160;&#160;   :</b> İstasyon Cad. No:57 Kocasinan / Kayseri</p>
 
           <p class="text"><b>Email&#160;&#160;   :</b> satis@heskontrolsistemleri.com</p>
-          <p class="text"><b>Whatsup Danışma Hattı :</b> 0352 222 54 00</p>
+          <p class="text"><b>Kurumsal Whatsapp İletişim Hattı :</b> 0 551 071 36 63</p>
           <ul class="social mt-40">
           </ul>
           <br></br>
