fiyat güncellemesi yapıldı

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                 <ul style="text-align:left">
                   <li><b>İçerik</b> &#160;&#160;&#160;&#160;&#160;&#160;&#160;: Yazılım </li>
                   <li><b>Donanım</b> &#160;: Kendi tabletinizi kullanabilirsiniz</li>
-                  <li><b>Fiyat</b> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;: 1500 TL</li>
+                  <li><b>Fiyat</b> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;: 3500 TL</li>
 
                 </ul>
             <!--    <div class="price">$0<span>/mo</span></div>-->
@@ -579,7 +579,7 @@
                 <ul style="text-align:left">
                   <li><b>İçerik</b> &#160;&#160; &#160;&#160;&#160;&#160;&#160;: Yazılım ve Tablet </li>
                   <li><b>Donanım</b> &#160;: 8" ya da 10 " tablet</li>
-                  <li><b>Fiyat</b> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;: 8" tablet ile 2500 TL, 10" tablet ile 3500tl</li>
+                  <li><b>Fiyat</b> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;: 8" tablet ile 5000 TL, 10" tablet ile 5500tl</li>
                 </ul>
               <!--  <div class="price">$99 <span>/mo</span></div> -->
               </div>
@@ -675,7 +675,7 @@
           <p class="text"><b>Kayseri Şube &#160;&#160;   :</b> İstasyon Cad. No:57 Kocasinan / Kayseri</p>
 
           <p class="text"><b>Email&#160;&#160;   :</b> satis@heskontrolsistemleri.com</p>
-          <p class="text"><b>Kurumsal Whatsapp İletişim Hattı :</b> 0 551 071 36 63</p>
+          <p class="text"><b>Kurumsal Whatsapp İletişim Hattı :</b> 0552 780 06 90</p>
           <ul class="social mt-40">
           </ul>
           <br></br>
