--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MFXFF94FZL"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-190569459-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'G-71LZTWYCLE');
-</script>
+      gtag('config', 'UA-190569459-1');
+    </script>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -30,6 +31,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/floating-wpp.css">
 
+    <link href="https://vjs.zencdn.net/7.10.2/video-js.css" rel="stylesheet" />
 
 <!--	<script src="http://code.jivosite.com/widget/OhbcnxFj4Z" async></script>
 -->
@@ -81,8 +83,11 @@
         <div class="row space-100">
           <div class="col-lg-7 col-md-12 col-xs-12">
             <div class="contents">
-              <h2 class="head-title">Hes Kodu Çözümleri</h2>
-              <p>Sağlık Bakanlığı ile entegrasyona gerek kalmadan, hızlı şekilde Hes Kodu Sorgulama İmkanı .</p>
+              <h2 class="head-title">Hes Kontrol Çözümleri</h2>
+              <p>- Lokanta, Restoran ve Kafe için pratik çözüm</p>
+              <p>- Elektriğe Bağlayın ve Kullanmaya Başlayın</p>
+              <p>- Sağlık Bakanlığı ile entegrasyona gerek yoktur</p>
+              <p>- Hızlı ve pratik şekilde Hes Kodu Sorgulama İmkanı</p>
               <div class="header-button">
                 <a href="#app-features" class="btn btn-border-filled nav-link page-scroll">Daha fazla Bilgi</a>
                 <!--<a href="#" class="btn btn-border">Get Started</a>-->
@@ -94,7 +99,30 @@
               <!--<img src="img/intro-mobile.png" alt="">-->
               <!--<img src="img/terminal2.png" alt="">-->
               <center>
-              <img src="img/kiosknew.png" alt="" style="height:410px">
+
+<video
+    id="my-video"
+    class="video-js"
+    controls
+    preload="auto"
+    width="440"
+    height="264"
+    poster="MY_VIDEO_POSTER.jpg"
+    data-setup="{}"
+    responsive=true
+  >
+    <source src="img/HesKontrolCihazi.mp4" type="video/mp4" />
+    <source src="MY_VIDEO.webm" type="video/webm" />
+    <p class="vjs-no-js">
+      To view this video please enable JavaScript, and consider upgrading to a
+      web browser that
+      <a href="https://videojs.com/html5-video-support/" target="_blank"
+        >supports HTML5 video</a
+      >
+    </p>
+  </video>
+  <p style="color:black;">Sesli uyarıları duymak için , video oynatıcının sessini açınız</p>
+              <!--<img src="img/kiosknew.png" alt="" style="height:410px">-->
             </center>
             </div>
           </div>
@@ -145,7 +173,7 @@
           <div class="col-lg-4 col-md-12 col-xs-12">
             <div class="show-box">
               <!--<img src="img/features/app.png" alt="">-->
-              <img src="img/tabletayak2.png" alt="">
+              <img src="img/tablet1.png" alt="">
 
             </div>
           </div>
@@ -263,15 +291,17 @@
           <div class="touch-slider owl-carousel">
             <div class="item">
               <div class="screenshot-thumb">
-                <img class="img-fluid" src="img/tabletayak2.png" alt="">
+                <img class="img-fluid" src="img/tablet1.png"  alt="" style="height:255px">
               </div>
             </div>
 
+<!--
             <div class="item">
               <div class="screenshot-thumb">
                 <img class="img-fluid" src="img/tabletayak.jpg" alt="">
               </div>
             </div>
+-->
             <div class="item">
               <div class="screenshot-thumb">
                 <img class="img-fluid" src="img/kiosknew.png" alt="" style="height:255px">
@@ -537,14 +567,14 @@
             <div class="pricing-table wow fadeInLeft" data-wow-delay="0.2s">
               <div class="pricing-details">
                 <div class="icon">
-                  <img class="img-fluid" src="img/tabletayak2.png" alt="">
+                  <img class="img-fluid" src="img/tablet1.png" style="height: 244px" alt="">
 
                 </div>
                 <h2>Sadece Yazılım</h2>
                 <ul style="text-align:left">
                   <li><b>İçerik</b> &#160;&#160;&#160;&#160;&#160;&#160;&#160;: Yazılım </li>
                   <li><b>Donanım</b> &#160;: Kendi tabletinizi kullanabilirsiniz</li>
-                  <li><b>Fiyat</b> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;: 3500 TL</li>
+                  <li><b>Fiyat</b> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;: Sorunuz</li>
 
                 </ul>
             <!--    <div class="price">$0<span>/mo</span></div>-->
@@ -561,13 +591,13 @@
             <div class="pricing-table">
               <div class="pricing-details">
                 <div class="icon">
-                  <img class="img-fluid" src="img/tabletayak2.png" alt="">
+                  <img class="img-fluid" src="img/tablet1.png" style="height: 244px" alt="">
                 </div>
                 <h2>Yazılım ve Tablet</h2>
                 <ul style="text-align:left">
                   <li><b>İçerik</b> &#160;&#160; &#160;&#160;&#160;&#160;&#160;: Yazılım ve Tablet </li>
                   <li><b>Donanım</b> &#160;: 8" ya da 10 " tablet</li>
-                  <li><b>Fiyat</b> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;: 8" tablet ile 5000 TL, 10" tablet ile 5500tl</li>
+                  <li><b>Fiyat</b> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;: Sorunuz </li>
                 </ul>
               <!--  <div class="price">$99 <span>/mo</span></div> -->
               </div>
@@ -588,7 +618,7 @@
                 <h2>Kiosk</h2>
                 <ul style="text-align:left">
                   <li><b>İçerik</b> &#160;&#160;&#160;&#160;&#160;&#160;&#160;: Yazılım,tablet ve kiosk </li>
-                  <li><b>Donanım</b> &#160;: 10" tablet</li>
+                  <li><b>Donanım</b> &#160;: 10" tablet ve kiosk</li>
                   <li><b>Fiyat</b> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;: Sorunuz .</li>
 
                 </ul>
@@ -612,14 +642,21 @@
     <section id="download">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 col-md-6 col-xs-12">
+          <div class="col-lg-4 col-md-4 col-xs-12">
+            <div class="download-thumb wow fadeInLeft" data-wow-delay="0.2s">
+              <iframe width="420" height="315"
+            src="https://www.youtube.com/embed/iGWRrirTqMk">
+            </iframe>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-xs-12">
             <div class="download-thumb wow fadeInLeft" data-wow-delay="0.2s">
               <iframe width="420" height="315"
             src="https://www.youtube.com/embed/4D9wRFoAZRM">
             </iframe>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-xs-12">
+          <div class="col-lg-4 col-md-4 col-xs-12">
             <div class="download-wrapper wow fadeInRight" data-wow-delay="0.2s">
               <div>
                 <iframe width="420" height="315"
@@ -838,10 +875,25 @@
     <script src="js/contact-form-script.js"></script>
     <script src="js/main.js"></script>
     <script src="js/floating-wpp.min.js"></script>
+    <script src="https://vjs.zencdn.net/7.10.2/video.min.js"></script>
 
 
   </body>
   <script type="text/javascript">
+
+
+
+//var player = videojs('my-video');
+//player.autoplay('muted');
+
+var player = videojs('my-video', {
+  responsive: true,
+   autoplay: 'muted'
+  //breakpoints: {
+    //medium: 500
+//  }
+});
+
   $(function () {
     $('#myButton').floatingWhatsApp({
       phone: '9005527800690',
