--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
     class="video-js"
     controls
     preload="auto"
-    width="440"
-    height="264"
+    width="500"
+    height="300"
     poster="MY_VIDEO_POSTER.jpg"
     data-setup="{}"
     responsive=true
@@ -643,32 +643,63 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-md-4 col-xs-12">
-            <div class="download-thumb wow fadeInLeft" data-wow-delay="0.2s">
+            <div class="download-thumb wow fadeInRight" data-wow-delay="0.2s">
               <iframe width="420" height="315"
             src="https://www.youtube.com/embed/iGWRrirTqMk">
             </iframe>
             </div>
           </div>
+
           <div class="col-lg-4 col-md-4 col-xs-12">
             <div class="download-thumb wow fadeInLeft" data-wow-delay="0.2s">
-              <iframe width="420" height="315"
-            src="https://www.youtube.com/embed/4D9wRFoAZRM">
+              <iframe width="400" height="315"
+            src="https://www.youtube.com/embed/6JE2uTCkFVY">
             </iframe>
             </div>
           </div>
+
           <div class="col-lg-4 col-md-4 col-xs-12">
-            <div class="download-wrapper wow fadeInRight" data-wow-delay="0.2s">
-              <div>
+            <div class="download-thumb wow fadeInLeft" data-wow-delay="0.2s">
+              <iframe width="400" height="315"
+            src="https://www.youtube.com/embed/g39cqne8BIQ">
+            </iframe>
+            </div>
+          </div>
+
+         </div>
+
+         <div class="row">
+
+          <div class="col-lg-4 col-md-4 col-xs-12">
+            <div class="download-thumb wow fadeInRight" data-wow-delay="0.2s">
+                <iframe width="420" height="315"
+            src="https://www.youtube.com/embed/fg4TgZj93N8">
+            </iframe>
+
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-4 col-xs-12">
+            <div class="download-thumb wow fadeInRight" data-wow-delay="0.2s">
+                <iframe width="420" height="315"
+            src="https://www.youtube.com/embed/4D9wRFoAZRM">
+            </iframe>
+
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-4 col-xs-12">
+            <div class="download-thumb wow fadeInRight" data-wow-delay="0.2s">
                 <iframe width="420" height="315"
             src="https://www.youtube.com/embed/iy-4Ss3awIo">
             </iframe>
-              </div>
+
             </div>
           </div>
         </div>
-      </div>
+    </div>
     </section>
--->
+
     <!-- download Section Start -->
 
 
