--- a/index.html
+++ b/index.html
@@ -713,8 +713,8 @@
             <div class="row" id="clients-scroller">
 
               <div class="client-item-wrapper">
-                <a href="http://www.kidsnook.com.tr" target="_blank">
-                  <img src="img/clients/kidsnook.jpg" style="transform: scale(1); height:100px" title="Kidsnook">
+                <a href="" target="_blank">
+                  <img src="img/beykoz.png" style="transform: scale(1); height:100px" title="Kidsnook">
                 </a>
               </div>
 
@@ -725,14 +725,14 @@
               </div>
 
               <div class="client-item-wrapper">
-                <a href="http://efebobinaj.com/" target="_blank">
-                  <img src="img/clients/efelogo.png" style="transform: scale(1); height:100px"  title="Efe Bobinaj">
+                <a href="" target="_blank">
+                  <img src="https://www.melikgazi.bel.tr/images/logo.webp" style="transform: scale(1); height:100px " title="Melikgazi Belediyesi">
                 </a>
               </div>
 
               <div class="client-item-wrapper">
                 <a href="https://jangle.co/" target="_blank">
-                  <img src="img/clients/jangle.svg" style="transform: scale(1); height:60px " title="Jangle" >
+                  <img src="https://www.forumkayseri.com/media/image/logo.png" style="transform: scale(1); height:100px " title="Jangle" >
                 </a>
               </div>
 
