şube adresleri girildi

--- a/index.html
+++ b/index.html
@@ -773,8 +773,9 @@
           <div class="col-8">
           <br></br>
 
-          <p class="text"><b>İstanbul Şube &#160;&#160;   :</b> Kısıklı Mah. Alemdağ Yanyolu Cad. Afra Sk. Ethembey Sitesi A Blok No:11 Üsküdar / İSTANBUL</p>
-          <p class="text"><b>Kayseri Şube &#160;&#160;   :</b> İstasyon Cad. No:57 Kocasinan / Kayseri</p>
+          <p class="text"><b>İstanbul Merkez Ofis &#160;&#160;   :</b> Kısıklı Mah. Alemdağ Yanyolu Cad. Afra Sk. Ethembey Sitesi A Blok No:11 Üsküdar / İSTANBUL</p>
+          <p class="text"><b>Ankara Bölge Bayi &#160;&#160;   :</b> Hoşdere cad. No:200/6 06540 Çankaya / Ankara</p>
+          <p class="text"><b>Kayseri Bölge Bayi &#160;&#160;   :</b> İstasyon Cad. No:57 Kocasinan / Kayseri</p>
 
           <p class="text"><b>Email&#160;&#160;   :</b> satis@heskontrolsistemleri.com</p>
           <p class="text"><b>İletişim :</b>
